<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="400dp"
    android:background="@color/dialogBackground"
    tools:context="com.droidheat.musicplayer.ui.activities.TimerActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/put_music_player_on_automatic_sleep_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/textColorTitle"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_alignStart="@+id/titleTextView"
        android:layout_alignEnd="@+id/titleTextView"
        android:layout_below="@+id/titleTextView"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="@drawable/audio_drawable"
        android:id="@+id/currentSleepTimer">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_sleep_timer"
            android:textColor="@color/textColorTitle"
            android:textStyle="bold"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_toStartOf="@+id/sleepTimerCancelButton"
            android:layout_marginBottom="4dp"
            android:id="@+id/text1231"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleeps_at_3_00am"
            android:layout_toStartOf="@+id/sleepTimerCancelButton"
            android:layout_below="@+id/text1231"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:id="@+id/currentSleepTimerTextView"
            android:textColor="@color/textColorSubTitle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:id="@+id/sleepTimerCancelButton"
            android:text="@string/cancel"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:textColor="@color/accentColor"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/titleTextView"
        android:layout_alignEnd="@+id/titleTextView"
        android:layout_below="@+id/currentSleepTimer"
        android:layout_marginBottom="16dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/music_player_will_automatically_stop_playback_after_your_given_time_please_insert_the_time_in_minutes_below_"
        android:textColor="@color/textColorSubTitle" />

    <TextView
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="46sp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:paddingLeft="10dp"
        android:maxLines="1"
        android:textColor="@color/textColorTitle"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText1"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:weightSum="3" >

        <Button
            android:id="@+id/button2"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="24sp"
            android:textStyle="normal"
            android:layout_weight="1"
            android:textColor="@color/textColorTitle"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/_1" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textColor="@color/textColorTitle"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/_2" />

        <Button
            android:id="@+id/button4"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:textColor="@color/textColorTitle"
            android:textSize="24sp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/_3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:weightSum="3" >

        <Button
            android:id="@+id/Button02"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="24sp"
            android:layout_weight="1"
            android:textColor="@color/textColorTitle"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/_4"/>

        <Button
            android:id="@+id/Button03"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="24sp"
            android:layout_weight="1"
            android:textColor="@color/textColorTitle"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/_5" />

        <Button
            android:id="@+id/Button04"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="24sp"
            android:layout_weight="1"
            android:textColor="@color/textColorTitle"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/_6"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp" >

        <Button
            android:id="@+id/Button05"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="24sp"
            android:textColor="@color/textColorTitle"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/_7"/>

        <Button
            android:id="@+id/Button06"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="24sp"
            android:textColor="@color/textColorTitle"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/_8" />

        <Button
            android:id="@+id/Button07"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="24sp"
            android:layout_weight="1"
            android:textColor="@color/textColorTitle"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/_9"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp" >


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        <ImageView
            android:src="@drawable/ic_close_black_24dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:tint="@color/textColorSubTitle"
            android:id="@+id/backCloseImageView"
            android:layout_width="24dp"/>

        <Button
            android:id="@+id/Button01"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="?attr/selectableItemBackgroundBorderless">

        </Button>
        </RelativeLayout>

        <Button
            android:id="@+id/button5"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="24sp"
            android:textColor="@color/textColorTitle"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/_0" />

        <Button
            android:id="@+id/button1"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textColor="@color/accentColor"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:fontFamily="sans-serif-condensed"
            android:textSize="18sp"
            android:text="@string/done" />
    </LinearLayout>

    <View
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_alignStart="@+id/editText1"
        android:layout_alignEnd="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:background="#dcdcdc" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignStart="@+id/editText1"
        android:text="@string/sleep_in"
        android:layout_marginTop="14dp"
        android:textColor="@color/textColorTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_alignBottom="@+id/editText1"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/textView3"
        android:text="@string/_0"
        android:textColor="@color/textColorTitle"
        android:layout_marginBottom="5dp"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:text="@string/min"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/textColorTitle" />

</RelativeLayout>
