<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="66dp"
    android:layout_gravity="top"
    android:background="@color/playerControlsBackground"
    android:id="@+id/relBody">
    <!---->

    <ImageView
        android:id="@+id/image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/hello_world"
        android:descendantFocusability="blocksDescendants"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_music_notes_padded"/>

    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:padding="16dp"
        android:text="@string/nullTime"
        android:textColor="#77ffffff" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_toStartOf="@+id/textTime"
        android:layout_toEndOf="@+id/image"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:paddingEnd="14dp"
            android:maxLines="1"
            android:textStyle="bold"
            android:text="@string/hello_world"
            android:textColor="#eeffffff"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/text"
            android:gravity="start"
            android:paddingEnd="14dp"
            android:maxLines="1"
            android:layout_marginTop="3dp"
            android:text="@string/no_song_available_"
            android:textColor="#77ffffff"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

    </RelativeLayout>


</RelativeLayout>